--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
         android:id="@+id/ll_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/activity_horizontal_margin" >
-
+        android:padding="@dimen/activity_normal_margin" >
+        <com.makeramen.RoundedImageView
+            android:id="@+id/rivAvatar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:scaleType="fitCenter"
+            android:paddingRight="@dimen/activity_small_margin"
+            app:riv_corner_radius="40dp"
+            app:riv_border_width="1dp"
+            app:riv_border_color="#e6e6e6"
+            app:riv_mutate_background="true"
+            app:riv_oval="true"
+            />
         <TextView
             android:id="@+id/tvUsername"
             android:layout_width="wrap_content"
@@ -16,6 +28,8 @@
             android:fontFamily="sans-serif"
             android:textSize="16sp"
             android:textColor="@color/primary"
+            android:layout_toRightOf="@+id/rivAvatar"
+            android:layout_centerVertical="true"
             />
         <TextView
             android:id="@+id/tvCreatedTime"
@@ -23,6 +37,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:textSize="12sp" />
         </RelativeLayout>
     <ImageView
@@ -37,10 +52,10 @@
         android:contentDescription="@string/photo" />
     <TextView
         android:id="@+id/tvlikes"
-        android:paddingTop="@dimen/activity_horizontal_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_like_margin"
+        android:paddingTop="@dimen/activity_normal_margin"
+        android:paddingLeft="@dimen/activity_normal_margin"
+        android:paddingRight="@dimen/activity_normal_margin"
+        android:paddingBottom="@dimen/activity_small_margin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ivPhoto"
@@ -49,12 +64,14 @@
         android:textColor="@color/primary"/>
     <TextView
         android:id="@+id/tvCaption"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingBottom="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_normal_margin"
+        android:paddingRight="@dimen/activity_normal_margin"
+        android:paddingBottom="@dimen/activity_normal_margin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvlikes"
         android:fontFamily="sans-serif"
-        android:textSize="14sp"/>
+        android:textSize="14sp"
+        android:maxLines="5"
+        android:ellipsize="end"/>
 </RelativeLayout>
