--- a/app/src/main/res/layout/item_photo.xml
+++ b/app/src/main/res/layout/item_photo.xml
@@ -70,7 +70,7 @@
         android:id="@+id/tvCaption"
         android:paddingLeft="@dimen/activity_normal_margin"
         android:paddingRight="@dimen/activity_normal_margin"
-        android:paddingBottom="@dimen/activity_normal_margin"
+        android:paddingBottom="@dimen/activity_small_margin"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvlikes"
@@ -78,4 +78,14 @@
         android:textSize="14sp"
         android:maxLines="5"
         android:ellipsize="end"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/list_comments"
+        android:orientation="vertical"
+        android:layout_below="@+id/tvCaption"
+        android:paddingLeft="@dimen/activity_normal_margin"
+        android:paddingRight="@dimen/activity_normal_margin"
+        android:paddingBottom="@dimen/activity_normal_margin"/>
 </RelativeLayout>
